# rules_proto_grpc

./: .bazelignore  .bazelrc  .gitignore  .gitpod.yml  .readthedocs.yaml  BUILD.bazel  CHANGELOG.md  CHANGELOG.rst  CNAME  LICENSE  MODULE.bazel  Makefile  README.md  README.rst  WORKSPACE  aspect.bzl  defs.bzl  deps.bzl  plugin.bzl  repositories.bzl  wercker.yml
android/: BUILD.bazel  README.md  README.rst  android_grpc_compile.bzl  android_grpc_library.bzl  android_proto_compile.bzl  android_proto_library.bzl  defs.bzl  deps.bzl  repositories.bzl
buf/: BUILD.bazel  README.md  README.rst  buf.bzl  buf_proto_breaking_test.bzl  buf_proto_lint_test.bzl  repositories.bzl
closure/: BUILD.bazel  README.md  closure_proto_compile.bzl  closure_proto_library.bzl  defs.bzl  deps.bzl  repositories.bzl
cpp/: BUILD.bazel  MODULE.bazel  README.md  README.rst  cpp_grpc_compile.bzl  cpp_grpc_library.bzl  cpp_proto_compile.bzl  cpp_proto_library.bzl  defs.bzl  deps.bzl  repositories.bzl
csharp/: BUILD.bazel  README.md  README.rst  csharp_grpc_compile.bzl  csharp_grpc_library.bzl  csharp_proto_compile.bzl  csharp_proto_library.bzl  defs.bzl  deps.bzl  repositories.bzl
csharp/nuget/: nuget.bzl  nuget.bzl.patch  regenerate_packages.sh
doc/: BUILD.bazel  README.md  README.rst  defs.bzl  doc_docbook_compile.bzl  doc_html_compile.bzl  doc_json_compile.bzl  doc_markdown_compile.bzl  doc_md_compile.bzl  doc_template_compile.bzl  repositories.bzl
example/routeguide/: BUILD.bazel  routeguide_test.bzl
examples/routeguide/: BUILD.bazel  routeguide_test.bzl
fsharp/: BUILD.bazel  fsharp_grpc_compile.bzl  fsharp_grpc_library.bzl  fsharp_proto_compile.bzl  fsharp_proto_library.bzl  repositories.bzl  wrapper.sh
fsharp/nuget/: nuget.bzl  nuget.bzl.patch  nuget2config.json  regenerate_packages.sh
go/: BUILD.bazel  README.md  README.rst  defs.bzl  deps.bzl  empty.template  go_grpc_compile.bzl  go_grpc_library.bzl  go_proto_compile.bzl  go_proto_library.bzl  go_validate_library.bzl  repositories.bzl
grpc-gateway/: BUILD.bazel  README.md  README.rst  defs.bzl  gateway_grpc_compile.bzl  gateway_grpc_library.bzl  gateway_openapiv2_compile.bzl  repositories.bzl
java/: BUILD.bazel  README.md  README.rst  defs.bzl  deps.bzl  java_grpc_compile.bzl  java_grpc_library.bzl  java_proto_compile.bzl  java_proto_library.bzl  repositories.bzl
js/: BUILD.bazel  README.md  README.rst  defs.bzl  js_grpc_node_compile.bzl  js_grpc_node_library.bzl  js_grpc_web_compile.bzl  js_grpc_web_library.bzl  js_proto_compile.bzl  js_proto_library.bzl  nodejs_grpc_compile.bzl  nodejs_grpc_library.bzl  repositories.bzl
js/requirements/: README.md  package.json
kotlin/: BUILD.bazel  defs.bzl  kotlin_grpc_compile.bzl  kotlin_grpc_library.bzl  kotlin_proto_compile.bzl  kotlin_proto_library.bzl  repositories.bzl
modules/buf/: BUILD.bazel  MODULE.bazel  buf.bzl  buf_proto_breaking_test.bzl  buf_proto_lint_test.bzl  module_extensions.bzl
modules/core/: MODULE.bazel  defs.bzl
modules/cpp/: BUILD.bazel  MODULE.bazel  cpp_grpc_compile.bzl  cpp_grpc_library.bzl  cpp_proto_compile.bzl  cpp_proto_library.bzl  defs.bzl
modules/csharp/: BUILD.bazel  MODULE.bazel  common.bzl  csharp_grpc_compile.bzl  csharp_grpc_library.bzl  csharp_proto_compile.bzl  csharp_proto_library.bzl  defs.bzl
modules/doc/: BUILD.bazel  MODULE.bazel  doc_docbook_compile.bzl  doc_html_compile.bzl  doc_json_compile.bzl  doc_markdown_compile.bzl  doc_template_compile.bzl  module_extensions.bzl
nodejs/: BUILD.bazel  README.md  defs.bzl  deps.bzl  nodejs_grpc_compile.bzl  nodejs_grpc_library.bzl  nodejs_proto_compile.bzl  nodejs_proto_library.bzl  repositories.bzl
nodejs/requirements/: package.json
protobuf/: BUILD.bazel  deps.bzl  repositories.bzl  toolchains.bzl
python/: BUILD.bazel  README.md  README.rst  defs.bzl  deps.bzl  python_grpc_compile.bzl  python_grpc_library.bzl  python_grpclib_compile.bzl  python_grpclib_library.bzl  python_proto_compile.bzl  python_proto_library.bzl  repositories.bzl  requirements.in  requirements.txt
python/grpclib/: BUILD.bazel
ruby/: BUILD.bazel  Gemfile  README.md  README.rst  defs.bzl  deps.bzl  repositories.bzl  ruby_grpc_compile.bzl  ruby_grpc_library.bzl  ruby_proto_compile.bzl  ruby_proto_library.bzl
rust/: BUILD.bazel  README.md  README.rst  common.bzl  compile.bzl  crate_deps.bzl  defs.bzl  deps.bzl  macros.bzl  providers.bzl  repositories.bzl  rust_fixer.bzl  rust_grpc_compile.bzl  rust_grpc_library.bzl  rust_prost_compile.bzl  rust_prost_proto_compile.bzl  rust_prost_proto_library.bzl  rust_proto_compile.bzl  rust_proto_lib.bzl  rust_proto_library.bzl  rust_tonic_grpc_compile.bzl  rust_tonic_grpc_library.bzl
rust/crates/: BUILD.anyhow-1.0.68.bazel  BUILD.async-stream-0.3.3.bazel  BUILD.async-stream-impl-0.3.3.bazel  BUILD.async-trait-0.1.63.bazel  BUILD.autocfg-1.1.0.bazel  BUILD.axum-0.6.4.bazel  BUILD.axum-core-0.3.2.bazel  BUILD.base64-0.13.1.bazel  BUILD.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.bytes-1.3.0.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.either-1.8.0.bazel  BUILD.fastrand-1.8.0.bazel  BUILD.fixedbitset-0.4.2.bazel  BUILD.fnv-1.0.7.bazel  BUILD.futures-0.3.25.bazel  BUILD.futures-channel-0.3.25.bazel  BUILD.futures-core-0.3.25.bazel  BUILD.futures-executor-0.3.25.bazel  BUILD.futures-io-0.3.25.bazel  BUILD.futures-macro-0.3.25.bazel  BUILD.futures-sink-0.3.25.bazel  BUILD.futures-task-0.3.25.bazel  BUILD.futures-util-0.3.25.bazel  BUILD.getrandom-0.2.8.bazel  BUILD.h2-0.3.15.bazel  BUILD.hashbrown-0.12.3.bazel  BUILD.heck-0.4.0.bazel  BUILD.http-0.2.8.bazel  BUILD.http-body-0.4.5.bazel  BUILD.http-range-header-0.3.0.bazel  BUILD.httparse-1.8.0.bazel  BUILD.httpdate-1.0.2.bazel  BUILD.hyper-0.14.23.bazel  BUILD.indexmap-1.9.2.bazel  (+80 more)
scala/: BUILD.bazel  README.md  README.rst  defs.bzl  deps.bzl  repositories.bzl  scala_grpc_compile.bzl  scala_grpc_library.bzl  scala_proto_compile.bzl  scala_proto_library.bzl
swift/: BUILD.bazel  README.md  README.rst  defs.bzl  deps.bzl  repositories.bzl  swift_grpc_compile.bzl  swift_grpc_library.bzl  swift_proto_compile.bzl  swift_proto_library.bzl
(+1092 files in other folders)
