bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_go", version = "0.44.2")
bazel_dep(name = "rules_proto", version = "6.0.0-rc2")

# Rulegen deps
rulegen_go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
rulegen_go_deps.module(
    path = "github.com/urfave/cli",
    sum = "h1:wYSSj06510qPIzGSua9ZqsncMmWE3Zr55KBERygyrxE=",
    version = "v1.21.0",
)
use_repo(rulegen_go_deps, "com_github_urfave_cli")

# Local overrides
bazel_dep(name = "rules_proto_grpc", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc",
    path = "modules/core",
)

bazel_dep(name = "rules_proto_grpc_example_protos", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_example_protos",
    path = "modules/example_protos",
)

# Buf
bazel_dep(name = "rules_proto_grpc_buf", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_buf",
    path = "modules/buf",
)

# C
bazel_dep(name = "rules_proto_grpc_c", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_c",
    path = "modules/c",
)

bazel_dep(name = "protobuf", version = "23.1")

# C++
bazel_dep(name = "rules_proto_grpc_cpp", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_cpp",
    path = "modules/cpp",
)

# Documentation
bazel_dep(name = "rules_proto_grpc_doc", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_doc",
    path = "modules/doc",
)

# Go
bazel_dep(name = "rules_proto_grpc_go", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_go",
    path = "modules/go",
)

# gRPC-Gateway
bazel_dep(name = "rules_proto_grpc_grpc_gateway", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_grpc_gateway",
    path = "modules/grpc_gateway",
)

# Objective-C
bazel_dep(name = "rules_proto_grpc_objc", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_objc",
    path = "modules/objc",
)

# Python
bazel_dep(name = "rules_proto_grpc_python", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_python",
    path = "modules/python",
)

bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
