bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "rules_cc", version = "0.2.2")
bazel_dep(name = "rules_dotnet", version = "0.19.2")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "rules_java", version = "8.15.2")
bazel_dep(name = "rules_scala", version = "7.1.1")
bazel_dep(name = "rules_shell", version = "0.6.0")

# Rulegen deps
rulegen_go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
rulegen_go_deps.module(
    path = "github.com/urfave/cli",
    sum = "h1:wYSSj06510qPIzGSua9ZqsncMmWE3Zr55KBERygyrxE=",
    version = "v1.21.0",
)
use_repo(rulegen_go_deps, "com_github_urfave_cli")

# Local overrides
bazel_dep(name = "rules_proto_grpc", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc",
    path = "modules/core",
)

bazel_dep(name = "rules_proto_grpc_example_protos", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_example_protos",
    path = "modules/example_protos",
)

# Buf
bazel_dep(name = "rules_proto_grpc_buf", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_buf",
    path = "modules/buf",
)

# C++
bazel_dep(name = "rules_proto_grpc_cpp", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_cpp",
    path = "modules/cpp",
)

bazel_dep(name = "toolchains_protoc", version = "0.5.0")

# Prevent version skew by matching protoc version to protobuf version, as C++ is the only lang that
# has no cross-version runtime guarantee:
# https://protobuf.dev/support/cross-version-runtime-guarantee/#cpp
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v31.1",
)

# C#
bazel_dep(name = "rules_proto_grpc_csharp", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_csharp",
    path = "modules/csharp",
)

# Documentation
bazel_dep(name = "rules_proto_grpc_doc", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_doc",
    path = "modules/doc",
)

# Go
bazel_dep(name = "rules_proto_grpc_go", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_go",
    path = "modules/go",
)

# gRPC-Gateway
bazel_dep(name = "rules_proto_grpc_grpc_gateway", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_grpc_gateway",
    path = "modules/grpc_gateway",
)

# Java
bazel_dep(name = "rules_proto_grpc_java", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_java",
    path = "modules/java",
)

# JavaScript
bazel_dep(name = "rules_proto_grpc_js", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_js",
    path = "modules/js",
)

bazel_dep(name = "aspect_rules_js", version = "2.5.0")

# Allow npm_link_all_packages of rules_proto_grpc_js_npm from rules_proto_grpc_js
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
use_repo(npm, "rules_proto_grpc_js_npm")

# Objective-C
bazel_dep(name = "rules_proto_grpc_objc", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_objc",
    path = "modules/objc",
)

# Python
bazel_dep(name = "rules_proto_grpc_python", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_python",
    path = "modules/python",
)

bazel_dep(name = "rules_python", version = "1.5.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

# Scala
bazel_dep(name = "rules_proto_grpc_scala", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_scala",
    path = "modules/scala",
)

# Swift
bazel_dep(name = "rules_proto_grpc_swift", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_swift",
    path = "modules/swift",
)
