load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "js_plugin",
    options = [
        "import_style=closure",
        "error_on_name_conflict",
        "add_require_for_enums",
        "one_output_file_per_input_file",
    ],
    outputs = ["{protopath}.js"],
    protoc_plugin_name = "js",
    visibility = ["//visibility:public"],
)
