load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "cpp_plugin",
    protoc_plugin_name = "cpp",
    outputs = [
        "{protopath}.pb.h",
        "{protopath}.pb.cc",
    ],
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_cpp_plugin",
    options = [
        "generate_mock_code=true",
    ],
    outputs = [
        "{protopath}.grpc.pb.h",
        "{protopath}.grpc.pb.cc",
        "{protopath}_mock.grpc.pb.h",
    ],
    tool = "@com_github_grpc_grpc//:grpc_cpp_plugin",
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
