load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "csharp_plugin",
    protoc_plugin_name = "csharp",
    outputs = ["{basename|pascal}.cs"],
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_csharp_plugin",
    outputs = ["{basename|pascal}Grpc.cs"],
    tool = "@com_github_grpc_grpc//src/compiler:grpc_csharp_plugin",
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
