load("//:defs.bzl", "proto_plugin")

proto_plugin(
    name = "docbook_plugin",
    options = [
        "docbook",
        "{name}.xml",
    ],
    out = "{name}.xml",
    tool = select({
        "@bazel_tools//src/conditions:darwin_x86_64": "@protoc_gen_doc_darwin//:protoc-gen-doc",
        "@bazel_tools//src/conditions:linux_x86_64": "@protoc_gen_doc_linux//:protoc-gen-doc",
        "@bazel_tools//src/conditions:windows": "@protoc_gen_doc_windows//:protoc-gen-doc",
    }),
    visibility = ["//visibility:public"],
    quirks = ["QUIRK_OUT_PASS_ROOT"],
)

proto_plugin(
    name = "html_plugin",
    options = [
        "html",
        "{name}.html",
    ],
    out = "{name}.html",
    tool = select({
        "@bazel_tools//src/conditions:darwin_x86_64": "@protoc_gen_doc_darwin//:protoc-gen-doc",
        "@bazel_tools//src/conditions:linux_x86_64": "@protoc_gen_doc_linux//:protoc-gen-doc",
        "@bazel_tools//src/conditions:windows": "@protoc_gen_doc_windows//:protoc-gen-doc",
    }),
    visibility = ["//visibility:public"],
    quirks = ["QUIRK_OUT_PASS_ROOT"],
)

proto_plugin(
    name = "json_plugin",
    options = [
        "json",
        "{name}.json",
    ],
    out = "{name}.json",
    tool = select({
        "@bazel_tools//src/conditions:darwin_x86_64": "@protoc_gen_doc_darwin//:protoc-gen-doc",
        "@bazel_tools//src/conditions:linux_x86_64": "@protoc_gen_doc_linux//:protoc-gen-doc",
        "@bazel_tools//src/conditions:windows": "@protoc_gen_doc_windows//:protoc-gen-doc",
    }),
    visibility = ["//visibility:public"],
    quirks = ["QUIRK_OUT_PASS_ROOT"],
)

proto_plugin(
    name = "markdown_plugin",
    options = [
        "markdown",
        "{name}.md",
    ],
    out = "{name}.md",
    tool = select({
        "@bazel_tools//src/conditions:darwin_x86_64": "@protoc_gen_doc_darwin//:protoc-gen-doc",
        "@bazel_tools//src/conditions:linux_x86_64": "@protoc_gen_doc_linux//:protoc-gen-doc",
        "@bazel_tools//src/conditions:windows": "@protoc_gen_doc_windows//:protoc-gen-doc",
    }),
    visibility = ["//visibility:public"],
    quirks = ["QUIRK_OUT_PASS_ROOT"],
)
