load("//:defs.bzl", "proto_plugin")

# Use an alias to resolve platform transitions and do the select based on the execution platform.
# Otherwise, if we put the select in the tool, then it selects based on the target platform instead. 
alias(
    name = "proto_gen_doc",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@protoc_gen_doc_darwin_arm64//:protoc-gen-doc",
        "@bazel_tools//src/conditions:darwin_x86_64": "@protoc_gen_doc_darwin_x86_64//:protoc-gen-doc",
        "@bazel_tools//src/conditions:linux_x86_64": "@protoc_gen_doc_linux_x86_64//:protoc-gen-doc",
        "@bazel_tools//src/conditions:windows": "@protoc_gen_doc_windows_x86_64//:protoc-gen-doc.exe",
    }),
)

proto_plugin(
    name = "docbook_plugin",
    out = "{name}.xml",
    options = [
        "docbook",
        "{name}.xml",
    ],
    quirks = [
        "QUIRK_OUT_PASS_ROOT",
        "QUIRK_DIRECT_MODE",
    ],
    tool = ":proto_gen_doc",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "html_plugin",
    out = "{name}.html",
    options = [
        "html",
        "{name}.html",
    ],
    quirks = [
        "QUIRK_OUT_PASS_ROOT",
        "QUIRK_DIRECT_MODE",
    ],
    tool = ":proto_gen_doc",

    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "json_plugin",
    out = "{name}.json",
    options = [
        "json",
        "{name}.json",
    ],
    quirks = [
        "QUIRK_OUT_PASS_ROOT",
        "QUIRK_DIRECT_MODE",
    ],
    tool = ":proto_gen_doc",

    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "markdown_plugin",
    out = "{name}.md",
    options = [
        "markdown",
        "{name}.md",
    ],
    quirks = [
        "QUIRK_OUT_PASS_ROOT",
        "QUIRK_DIRECT_MODE",
    ],
    tool = ":proto_gen_doc",

    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "template_plugin",
    out = "{name}",
    quirks = [
        "QUIRK_OUT_PASS_ROOT",
        "QUIRK_DIRECT_MODE",
    ],
    separate_options_flag = True,
    tool = ":proto_gen_doc",

    visibility = ["//visibility:public"],
)
