load("//:defs.bzl", "proto_plugin")

load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_import_binary")

core_import_binary(
    name = "protoc-gen-fsharp",
    src = "@grpc-fsharp//:lib",
    version = "0.1.3",
    deps = [
        "@google.protobuf//:lib",
        "@fsharp.core//:lib",
        "@protobuf.fsharp//:lib"
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "fsharp_plugin",
    options = ["no_server", "no_client"],
    outputs = ["{basename|pascal}.fs"],
    protoc_plugin_name = "fsharp",
    separate_options_flag = True,
    tool = ":wrapper",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_fsharp_plugin",
    options = [""],
    outputs = ["{basename|pascal}.fs"],
    protoc_plugin_name = "fsharp",
    separate_options_flag = True,
    tool = ":wrapper",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "wrapper",
    srcs = ["wrapper.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        ":protoc-gen-fsharp",
    ],
)