load("//:defs.bzl", "proto_plugin")

proto_plugin(
    name = "fsharp_plugin",
    options = [
        "no_server",
        "no_client",
    ],
    outputs = ["{basename|pascal}.fs"],
    protoc_plugin_name = "fsharp",
    separate_options_flag = True,
    tool = ":wrapper",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_fsharp_plugin",
    options = [""],
    outputs = ["{basename|pascal}.fs"],
    protoc_plugin_name = "fsharp",
    separate_options_flag = True,
    tool = ":wrapper",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "wrapper",
    srcs = ["wrapper.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@protoc-gen-fsharp//:bin",
    ],
    toolchains = [
        "@io_bazel_rules_dotnet//dotnet:toolchain_type_csharp_core",
    ],
)
