load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "go_plugin",
    options = ["paths=source_relative"],
    outputs = ["{protopath}.pb.go"],
    tool = "@com_github_golang_protobuf//protoc-gen-go",
    exclusions = [
        "google/api",
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_go_plugin",
    options = [
        "paths=source_relative",
    ],
    outputs = ["{protopath}_grpc.pb.go"],
    tool = "@org_golang_google_grpc_cmd_protoc_gen_go_grpc//:protoc-gen-go-grpc",
    exclusions = [
        "google/api",
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
