load("//:defs.bzl", "proto_plugin")

proto_plugin(
    name = "grpc_gateway_plugin",
    empty_template = "empty.template",
    exclusions = [
        "google/api",
        "google/protobuf",
    ],
    options = ["paths=source_relative"],
    outputs = ["{protopath}.pb.gw.go"],
    tool = "@grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "openapiv2_plugin",
    exclusions = [
        "google/api",
        "google/protobuf",
    ],
    outputs = ["{protopath}.swagger.json"],
    tool = "@grpc_ecosystem_grpc_gateway//protoc-gen-openapiv2",
    visibility = ["//visibility:public"],
)
