load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "nodejs_plugin",
    protoc_plugin_name = "js",
    options = [
        "import_style=commonjs",
        "binary",
    ],
    outputs = ["{protopath}_pb.js"],
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_nodejs_plugin",
    outputs = ["{protopath}_grpc_pb.js"],
    tool = "@com_github_grpc_grpc//src/compiler:grpc_node_plugin",
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
