load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "nodejs_plugin",
    protoc_plugin_name = "js",
    options = [
        "import_style=commonjs",
        "binary",
    ],
    outputs = ["{protopath}_pb.js"],
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_nodejs_plugin",
    outputs = ["{protopath}_grpc_pb.js"],
    tool = "@nodejs_modules//grpc-tools/bin:grpc_tools_node_protoc_plugin",
    options = [
        "grpc_js",
    ],
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
