load(":toolchains.bzl", "protoc_toolchain")

# Alias protoc
alias(
    name = "protoc_bin",
    actual = select({
        "@bazel_tools//src/conditions:darwin_x86_64": "@rules_proto_grpc_protoc_darwin_x86_64//:bin/protoc",
        "@bazel_tools//src/conditions:linux_x86_64": "@rules_proto_grpc_protoc_linux_x86_64//:bin/protoc",
        "@bazel_tools//src/conditions:windows": "@rules_proto_grpc_protoc_windows_x86_64//:bin/protoc.exe",
        "//conditions:default": "@com_google_protobuf//:protoc"
    }),
    visibility = ["//visibility:public"],
)

# Define toolchain type for protoc compiler
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

# Create the default protoc toolchain
protoc_toolchain(
    name = "protoc",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "protoc_toolchain",
    toolchain = ":protoc",
    toolchain_type = ":toolchain_type",
)
