load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "ruby_plugin",
    protoc_plugin_name = "ruby",
    outputs = ["{protopath}_pb.rb"],
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_ruby_plugin",
    outputs = ["{protopath}_services_pb.rb"],
    tool = "@com_github_grpc_grpc//src/compiler:grpc_ruby_plugin",
    empty_template = "empty.template",
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
