load("//:defs.bzl", "proto_plugin")

proto_plugin(
    name = "rust_plugin",
    exclusions = [
        "google/protobuf",
    ],
    # Use the proto basename and pipe the value to the rust_keyword function.
    # Ths function will append '_pb' if the basename is a rust keyword.
    outputs = ["{basename|rust_keyword}.rs"],
    tool = "//rust/raze:cargo_bin_protoc_gen_rust",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_rust_plugin",
    empty_template = "empty.template",
    exclusions = [
        "google/protobuf",
    ],
    # Use the proto basename and pipe the value to the rust_keyword function.
    # Ths function will append '_pb' if the basename is a rust keyword.
    outputs = ["{basename|rust_keyword}_grpc.rs"],
    tool = "//rust/raze:cargo_bin_protoc_gen_rust_grpc",
    visibility = ["//visibility:public"],
)
